--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_riverpod: ^2.3.3
   flutter_svg: ^2.0.4
   go_router: ^6.5.5
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
