--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="stotppub"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDvTUe3Yy61WTVUzwN80gaBLDCEk7shdEQ"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
