--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.5.2
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.4.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.3
   flutter_svg: ^2.0.4
   go_router: ^6.5.5
   google_maps_flutter: ^2.2.5
+  localstorage: ^4.0.1+2
   timeline_tile: ^2.0.0
 
 dev_dependencies:
