--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_snackbar_content: ^0.1.3
+  change_app_package_name: ^1.1.0
   cloud_firestore: ^4.5.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.3.3
+  flutter_riverpod: ^2.3.6
   flutter_svg: ^2.0.4
-  go_router: ^6.5.5
+  go_router: ^6.5.7
   google_maps_flutter: ^2.2.5
   localstorage: ^4.0.1+2
   timeline_tile: ^2.0.0
